--- a/hofvidz-project/Procfile
+++ b/hofvidz-project/Procfile
@@ -1,3 +1,3 @@
-web: python website/manage.py runserver 0.0.0.0:$PORT
+web: python hofvidz-project/manage.py runserver 0.0.0.0:$PORT
 release: python manage.py migrate
 web: gunicorn hofvidz.wsgi
